<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textCapWords"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/firstNameEditText"
        android:layout_below="@+id/firstNameEditText"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textCapWords"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignRight="@+id/firstNameEditText" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lastNameEditText"
        android:layout_below="@+id/lastNameEditText"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignLeft="@+id/lastNameEditText" />


    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/emailEditText"
        android:layout_below="@+id/emailEditText"
        android:layout_centerVertical="true"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignRight="@+id/emailEditText" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/phoneEditText"
        android:layout_below="@+id/phoneEditText"
        android:layout_marginTop="292dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignLeft="@+id/phoneEditText" />


    <EditText
        android:id="@+id/passwordConfirmEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/passwordEditText"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignLeft="@+id/passwordEditText" />


    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:onClick="submitData"
        android:text="@string/submit_data"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>